# AARemu

./: .gitignore  LICENSE.TXT  Parameters.java  README.md  Readme.html  build.gradle  gradle.properties  index.html  local.properties  settings.gradle
AROpenCVemu/: AndroidManifest.xml  build.gradle
ARToolKitEm/: .gitignore  AndroidManifest.xml  build.gradle
ARToolKitEm/c++/: ARemController.cc  ARemController.h  ARemToolKitWrapperExportedAPI.cc  CMakeLists.txt  VideoSourceFactory.cc  VideoSourceFactory.h
ARToolKitEm/jni/: ARemVideoSource.cc  ARemVideoSource.h  CMakeLists.txt  gen.sh  to_augmented_reality_android_em_artoolkitem_NativeInterfaceEmu.h
ARemOpenCVSample/: AndroidManifest.xml  build.gradle
ARemRecorder/: .gitignore  AndroidManifest.xml  CMakeLists.txt  bearingtimes.txt  build.gradle  cert  proguard-rules.pro  svg2android.sh
ARemRecorder/PostProcessor/: CMakeLists.txt  CMakeLists.txt.windows  build-opencv-cuda.sh  build-opencv-opencl.sh  build-opencv-static.sh
ARemRecorder/PostProcessor/build.windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  create.bat  postprocessor.sln  postprocessor.vcxproj  postprocessor.vcxproj.filters
ARemRecorder/PostProcessor/src/: Orientation.cc  Orientation.h  RingBuffer.h  create360.cc  create360.h  cv.cc  cv.h  main.cc  path.h  processing.cc  processing.h  util.cc  util.h
ARemRecorder/androidTest/java/to/augmented/reality/android/em/recorder/: ApplicationTest.java
ARemRecorder/assets/: record_help.html
ARemRecorder/assets/docs/: postprocess.html
ARemRecorder/assets/shaders/camera/direct/preview/: vertex.glsl
ARemRecorder/assets/shaders/camera/direct/record/: fragment.glsl  vertex.glsl
ARemRecorder/assets/shaders/camera/texture/preview/: fragment.glsl  fragment.glsl.nv212rgb  vertex.glsl
ARemRecorder/assets/shaders/camera/texture/record/: vertex.glsl
ARemRecorder/assets/shaders/render/: fragment.glsl  vertex.glsl
ARemRecorder/c++/cv/: .gitignore  cv.cc  to_augmented_reality_android_em_recorder_CV.h
ARemRecorder/c++/framebuffer/: .gitignore  CMakeLists.txt  build.sh  framebuffer.cc  framebuffer.hh  gen.sh  snappy.cc
ARemRecorder/c++/rgba2rgb/: RGBAtoRGB.c
ARemRecorder/cvutils/: .gitignore  CMakeLists.txt  cvcc.sh  cvccdb.sh  cvcl.sh  disp.cc  dispframe.cc  dispframes.cc  dispframes2.cc  eval.cc  filediff.cc  fourier_shift.cc  framediff.cc  imgsim.cc  templ.cc
ARemRecorder/cvutils/.kdev4/: cvutils.kdev4
ARemRecorder/cvutils/PostProcess/: CMakeLists.txt  postprocess.cc  postprocess.h
ARemRecorder/img/: record.xcf  record_green.xcf  shutter-start.svg.org  shutter-stop.svg.org
ARemRecorder/jni/: Android.mk  Android.mk.1  Application.mk  Application.mk.opencl  CMakeLists.txt  RGBAtoRGB.c  build.sh  cc.sh  gen.sh  test-rgb.c  test-rgb565.c  to_augmented_reality_android_em_recorder_RGBAtoRGB.h  to_augmented_reality_android_em_recorder_RGBAtoRGB_RGB565Convertor.h  to_augmented_reality_android_em_recorder_RGBAtoRGB_StripeConvertor.h
ARemRecorder/jni/android-cmake/: FindOpenGLES3.cmake
ARemRecorder/jni/cv/: clang_complete  cv.cc  gen.sh  to_augmented_reality_android_em_recorder_CV.h
ARemRecorder/jni/cv/desktop/: CMakeLists.txt  cc.sh  cv.cc  to_augmented_reality_android_em_recorder_CV.h
ARemRecorder/jni/framebuffer/: CMakeLists.txt  FindJNI.cmake  clang_complete  framebuffer.cc  framebuffer.hh  framebuffer.kdev4  snappy-stubs-internal.h  to_augmented_reality_android_em_recorder_NativeFrameBuffer.h
ARemRecorder/jni/framebuffer/.kdev4/: framebuffer.kdev4
ARemRecorder/jni/opencv/: README
ARemRecorder/jni/rgba2rgb/: RGBAtoRGB.c  gen.sh
ARemRecorder/res/drawable/: rect_border.xml
ARemRecorder/res/layout/: activity_recorder.xml  help_dialog.xml  record_help_dialog.xml  snack.xml  start_360recording.xml  start_freerecording.xml  start_recording.xml  three60_recording_result.xml  three60_recording_result_header.xml  three60_recording_result_row.xml
ARemRecorder/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml
ARemRecorder/res/values-v11/: strings.xml
ARemRecorder/res/values-w820dp/: dimens.xml
ARemRecorder/rs/: yuv2grey.rs  yuv2rgba.rs
ARemRecorder/src/com/doubleTwist/drawerlib/: ADrawerLayout.java
ARemRecorder/src/com/thomashaertel/widget/: MultiSpinner.java
ARemRecorder/src/to/augmented/reality/android/em/recorder/: ARSurfaceView.java  BearingFrameMatcherThread.java  BearingRingBuffer.java  Bufferable.java  CV.java  CameraPreviewCallback.java  CameraPreviewConvertCallback.java  CameraPreviewThread.java  EventRingBuffer.java  FrameDiff.java  FrameWriterThread.java  FreeRecordingThread.java  Freezeable.java  GLRecorderRenderer.java  LegacyPreviewCamera.java  LocationHandler.java  MergeRecordingThread.java  MutablePair.java  NativeCVException.java  NativeFrameBuffer.java  OrientationData.java  OrientationHandler.java  OrientationRingBuffer.java  PreviewCamera.java  PreviewData.java  Previewable.java  ProgressParam.java  RGBAtoRGB.java  RGBAtoRGB565.rs  RecorderActivity.java  RecorderRingBuffer.java  RecordingThread.java  RetryRecordingThread.java  Three60RecordingResult.java  Three60RecordingThread.java  TraverseRecordingThread.java  TraverseRecordingThread2.java
ARemRecorder/src/to/augmented/reality/android/em/recorder/fullscreen/: SystemUiHider.java  SystemUiHiderBase.java  SystemUiHiderHoneycomb.java
ARemRecorder/src/to/augmented/reality/android/em/recorder/util/: MutablePair.java  MutableQuad.java  MutableTriple.java
ARemRecorder/test/to/augmented/reality/android/em/recorder/: CVTest.java  MergeRecordingThreadTest.java  TraverseRecordingThread2Test.java  TraverseRecordingThreadTest.java
ARemSample/: ARemSample.apk  AndroidManifest.xml  build.gradle  icon.xcf
ARemu/: AndroidManifest.xml  build.gradle
C++/: CMakeLists.txt
C++/ARemucc/: CMakeLists.txt
C++/ARemucc/src/: AREmu360Player.cc  AREmu360Player.h  AREmuFreePlayer.cc  AREmuFreePlayer.h  KeyBuffer.h  Latch.h  Player.cc  Player.h  path.h  sample360.cc  sample360.h  samplefree.cc  samplefree.h  util.cpp  util.h
Common/: build.gradle  (+1 more)
(+119 files in other folders)
